syntax = "proto3";

package example.grpc.hello;
option java_package = "example.armeria.grpc.http.messaging";

import "google/api/annotations.proto";

// See https://cloud.google.com/endpoints/docs/grpc-service-config/reference/rpc/google.api#httprule
// for more information.
service Messaging {
  rpc GetMessageV1(GetMessageRequestV1) returns (MessageV1) {
    option (google.api.http) = {
      get: "/v1/{name=messages/*}"
    };
  }
  rpc GetMessageV2(GetMessageRequestV2) returns (MessageV1) {
    option (google.api.http) = {
      get:"/v2/messages/{message_id}"
    };
  }
  rpc UpdateMessageV1(UpdateMessageRequestV1) returns (MessageV1) {
    option (google.api.http) = {
      patch: "/v1/messages/{message_id}"
      body: "message"
    };
  }
  rpc UpdateMessageV2(MessageV2) returns (MessageV2) {
    option (google.api.http) = {
      patch: "/v2/messages/{message_id}"
      body: "*"
    };
  }
  rpc GetMessageV3(GetMessageRequestV3) returns (MessageV2) {
    option (google.api.http) = {
      get: "/v3/messages/{message_id}"
      additional_bindings {
        get: "/v3/users/{user_id}/messages/{message_id}"
      }
    };
  }
}

message GetMessageRequestV1 {
  string name = 1; // Mapped to URL path.
}

message UpdateMessageRequestV1 {
  string message_id = 1; // mapped to the URL
  MessageV1 message = 2;   // mapped to the body
}

message GetMessageRequestV2 {
  message SubMessage {
    string subfield = 1;
  }
  string message_id = 1; // Mapped to URL path.
  int64 revision = 2;    // Mapped to URL query parameter `revision`.
  SubMessage sub = 3;    // Mapped to URL query parameter `sub.subfield`.
}

message GetMessageRequestV3 {
  string message_id = 1;
  string user_id = 2;
}

message MessageV1 {
  string text = 1; // The resource content.
}

message MessageV2 {
  string message_id = 1;
  string text = 2;
}